--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
 </head>
 <body>
     Esta es mi pagina de presentacion
+
+    <div class="container" >
+<label>Nombre:</label>
+<br>
+<imput type="tex" id="nombre" name="nombre">
+    <br>
+    <label>Edad:</label>
+    <imput type="number" min="0" max="99" id="edad" name="edad"> 
+    </div>
 </body>
 </html>
