Espacio de Johan

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     Esta es mi pagina de presentacion
+
+    <div>
+        Este espacio es de Johan.
+    </div>
 </body>
 </html>
