--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
     <title>Mi Pagina Web</title>
 </head>
 <body>
-    Esta es mi pagina de presentacion
+    Esta parte es propiedad de de Jesusthebig 
 
     <div class="container" >
-<label>Nombre:</label>
+<label>Nombre: Jesus</label>
 <br>
 <imput type="tex" id="nombre" name="nombre">
     <br>
-    <label>Edad:</label>
+    <label>Edad: 20</label>
     <imput type="number" min="0" max="99" id="edad" name="edad"> 
     </div>
+<div>
+
+</div>
+
 </body>
 </html>
