Espacio de Johan

--- a/index.html
+++ b/index.html
@@ -3,13 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Pagina Web</title>
+    <title>Johan Barrientos</title>
 </head>
 <body>
+    <main>
+        <h1>
+            Johan Barrientos
+            <sup>19</sup>
+        </h1>
+        <h2>Curriculum</h2>
+        <span>Mexico,CDMX</span>
+        <p>Informacion de contacto:
+            <li>Direccion:Calle Principal de la Ciudad de Mexico</li>
+            <li>Telefono: 5514935618</li>
+            <li>Correo electronico: j.barrientos@gmail.com </li>
+        </p>
+        <p>Estudios: 
+            <li>primaria</li>
+            <li>secundaria</li>
+            <li>preparatoria</li>
+            <li>Universidad</li>
+            </p>
+        <p>
+            Objetivo:
+            Soy un profesional dedicado y comprometido en busca de oportunidades para aplicar mis hablilidades de comunicacion y gestion.
+            </p>
+        <p>Experiencia Laboral:
+            Asistente de Marketing- Empresa XYZ, Ciudad
+            <li>Desarrollo de campañas de redes sociales y analisi de datos</li>
+            <li>Colaboracion en la organizacion de eventos promocionales</li>
+            <li>Asistencia en el proceso de reclutamiento y seleccion</li>
+        </p>
+        <p>Educacion: Licensiatura en administracion de empresas- Universidad UTC, Mexico
+            Especializacion en Marketing
+        </p>
+        <p>Habilidades: 
+            <li>Manejo avanzado de redes sociales y herramientas de analisis</li>
+            <li>Excelentes habilidades de comunicacion verbal y escrita</li>
+            <li>Capacidad para trabajar en equipo y bajo presion</li>
+        </p>
+    </main>
     Esta es mi pagina de presentacion
 
     <div>
-        Este espacio es de Johan.
+        Este espacio es de Johan
     </div>
 </body>
-</html>
+</html
